@@ -1,5 +1,7 @@
 === HEAD
 
+* Fix literalization of SQL::Blobs in DataObjects and JDBC adapter's postgresql subadapters when ruby 1.9 is used (jeremyevans)
+
 * When using standard strings in the postgres adapter with the postgres-pr driver, use custom string escaping to prevent errors (jeremyevans)
 
 * Before hooks now run in reverse order of being added, so later ones are run first (tamas)
